--- a/client/static/html/chat.html
+++ b/client/static/html/chat.html
@@ -3,20 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Online</title>
-    <link rel="stylesheet" href="../static/css/test.css">
+    <title>CHAT</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <div class="chat-container">
-        <div class="chat-header">
-            <h1>Chat Online</h1>
-        </div>
-        <ul id="messages" class="chat-messages"></ul>
-        <form id="send-message" class="chat-form">
-            <input id="message" type="text" autocomplete="off" required placeholder="Type your message here..."/>
-            <button>Send</button>
-        </form>
+<body class="bg">
+    <div class="container">
+        <iframe class="token" src="token.html" title="Send token" width="100%" height="500px"></iframe>
+        <iframe class="chat" src="test.html" title="Send token" width="100%" height="500px"></iframe>
     </div>
-    <script src="../static/js/Ws_Handler.js"></script>
 </body>
 </html>
