--- a/client/static/html/login.html
+++ b/client/static/html/login.html
@@ -6,29 +6,16 @@
     <title>Login</title>
     <link rel="stylesheet" href="static/css/Auth.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
-    <style>
-        /* Estilos para centrar el contenido */
-        body, html {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f8f9fa; /* Color de fondo */
-        }
-        .card {
-            width: 400px; /* Ancho máximo del formulario */
-            text-align: center; /* Centrar texto */
-        }
-    </style>
-  </head>
-  <script src="static/js/Login_Handler.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="static/js/Login_Handler.js" defer></script>
+</head>
 <body>
     <div class="card p-4">
+
         <h2>Iniciar Sesión</h2>
         <p>Ingresa tus credenciales para acceder</p>
-        <form onsubmit="submitForm(event)">
+
+        <form onsubmit="loginFun(event)">
             <div class="input-group form-floating mb-3">
                 <input type="text" id="user_name" name="user_name" placeholder="Elige un nombre de usuario" required class="form-control">
                 <span class="input-group-text">@</span>
@@ -41,14 +28,14 @@
                 <label for="user_password">Contraseña</label>
             </div>
 
-            <button type="submit" class="btn btn-primary">
-                Login
-            </button> 
+            <button type="submit" class="btn btn-primary">Login</button> 
             
             <button type="button" class="btn btn-primary"
             onclick="window.location.href='./register';">Register</button>       
         </form> 
-        <div id="response"></div> <!-- Elemento para mostrar mensajes de respuesta -->
+
+        <div id="response"></div>
+
     </div>
 </body>
 </html>
