--- a/client/static/html/register.html
+++ b/client/static/html/register.html
@@ -5,31 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrarse</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script> 
     <link rel="stylesheet" href="static/css/Auth.css">
-    <script src="static/js/Register_Handler.js"></script>
-    <style>
-        /* Estilos para centrar el contenido */
-        body, html {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f8f9fa; /* Color de fondo */
-        }
-        .card {
-            width: 400px; /* Ancho máximo del formulario */
-            text-align: center; /* Centrar texto */
-        }
-    </style>
+    <script src="static/js/Register_Handler.js" defer></script>
 </head>
 <body>
     <div class="card p-4">
         <h2>Registrarse</h2>
         <p>Crea una nueva cuenta</p>
 
-        <form onsubmit="submitForm(event)">
+        <form onsubmit="registerFun(event)">
             <div class="input-group form-floating mb-3">
                 <input type="text" id="user_name" name="user_name" placeholder="Elige un nombre de usuario" required class="form-control">
                 <span class="input-group-text">@</span>
@@ -47,14 +32,12 @@
                 <label for="confirmPassword">Confirmar Contraseña</label>
             </div>
 
-            <button type="button" class="btn btn-primary" onclick="window.location.href='./login';">
-                Login 
-            </button> 
+            <button type="button" class="btn btn-primary" onclick="window.location.href='./login';">Login</button> 
             
             <button type="submit" class="btn btn-primary">Register</button>       
         </form> 
 
-        <div id="response"></div> <!-- Elemento para mostrar mensajes de respuesta --> 
+        <div id="response"></div>
     </div>
 </body>
 </html>
