--- a/client/static/html/register.html
+++ b/client/static/html/register.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script> 
     <link rel="stylesheet" href="static/css/Auth.css">
-    <script src="static/js/Register_Handler.js" defer></script>
+    <script src="static/js/Auth_Handler.js" defer></script>
 </head>
 <body>
     <div class="card p-4">
