--- a/client/static/html/join.html
+++ b/client/static/html/join.html
@@ -3,35 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Join to Chat</title>
     <link rel="stylesheet" href="static/css/Auth.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/js/Auth_Handler.js" defer></script>
+    <link rel="stylesheet" href="static/css/Join.css">
+
 </head>
 <body>
     <div class="card p-4">
 
-        <h2>Iniciar Sesión</h2>
+        <h2>Credentials</h2>
         <p>Ingresa tus credenciales para acceder</p>
 
         <form onsubmit="loginFun(event)">
             <div class="input-group form-floating mb-3">
                 <input type="text" id="user_name" name="user_name" placeholder="Elige un nombre de usuario" required class="form-control">
                 <span class="input-group-text">@</span>
-                <label for="user_name">Usuario</label>            
+                <label for="user_name">Name</label>            
             </div>
           
             <div class="input-group form-floating mb-3">
                 <input type="password" id="user_password" name="user_password" placeholder="Ingresa tu contraseña" required class="form-control">              
-                <span class="input-group-text">forExample123</span>
-                <label for="user_password">Contraseña</label>
+                <span class="input-group-text">* *</span>
+                <label for="user_password">Password</label>
             </div>
 
-            <button type="submit" class="btn btn-primary">Login</button> 
-            
-            <button type="button" class="btn btn-primary"
-            onclick="window.location.href='./register';">Register</button>       
+            <button type="submit" class="btn btn-primary">Join</button>        
         </form> 
 
         <div id="response"></div>
